--- a/hpanel.service
+++ b/hpanel.service
@@ -1,14 +1,15 @@
 [Unit]
-Description=hPanel - File Manager
-Documentation=https://github.com/yourusername/hpanel
+Description=hPanel - File Manager & Control Panel
+Documentation=https://github.com/SefionITServices/hpanel
 After=network.target
 
 [Service]
 Type=simple
-User=root
-WorkingDirectory=/opt/hpanel
-ExecStart=/usr/bin/node server.js
-Restart=on-failure
+User=hpanel
+Group=hpanel
+WorkingDirectory=/opt/hpanel/backend
+ExecStart=/usr/bin/node dist/main.js
+Restart=always
 RestartSec=10
 StandardOutput=journal
 StandardError=journal
@@ -16,10 +17,12 @@ SyslogIdentifier=hpanel
 
 # Environment
 Environment=NODE_ENV=production
+Environment=PORT=3334
 
 # Security
 NoNewPrivileges=true
 PrivateTmp=true
+ReadWritePaths=/opt/hpanel/data
 
 # Performance
 LimitNOFILE=65535
