--- a/apache.conf.example
+++ b/apache.conf.example
@@ -1,11 +1,11 @@
-<VirtualHost *:80>
+﻿<VirtualHost *:80>
     ServerName your-domain.com
     ServerAlias www.your-domain.com
 
     # Redirect HTTP to HTTPS (uncomment after setting up SSL)
     # Redirect permanent / https://your-domain.com/
 
-    # Proxy settings for hPanel
+    # Proxy settings for clearPanel
     ProxyPreserveHost On
     ProxyPass / http://localhost:3000/
     ProxyPassReverse / http://localhost:3000/
@@ -22,8 +22,8 @@
     RequestHeader set X-Forwarded-Port "80"
 
     # Logs
-    ErrorLog ${APACHE_LOG_DIR}/hpanel_error.log
-    CustomLog ${APACHE_LOG_DIR}/hpanel_access.log combined
+    ErrorLog ${APACHE_LOG_DIR}/clearPanel_error.log
+    CustomLog ${APACHE_LOG_DIR}/clearPanel_access.log combined
 
     # File upload size limit (100MB)
     LimitRequestBody 104857600
@@ -55,9 +55,10 @@
 #     RequestHeader set X-Forwarded-Port "443"
 #
 #     # Logs
-#     ErrorLog ${APACHE_LOG_DIR}/hpanel_ssl_error.log
-#     CustomLog ${APACHE_LOG_DIR}/hpanel_ssl_access.log combined
+#     ErrorLog ${APACHE_LOG_DIR}/clearPanel_ssl_error.log
+#     CustomLog ${APACHE_LOG_DIR}/clearPanel_ssl_access.log combined
 #
 #     # File upload size
 #     LimitRequestBody 104857600
 # </VirtualHost>
+
