--- a/backend/package.json
+++ b/backend/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "hpanel-backend",
+  "name": "clearpanel-backend",
   "version": "2.0.0",
   "description": "clearPanel NestJS backend",
   "license": "MIT",
