--- a/clearpanel.service
+++ b/clearpanel.service
@@ -1,18 +1,19 @@
-Description=hPanel - File Manager & Control Panel
-Documentation=https://github.com/SefionITServices/hpanel
+[Unit]
+Description=clearPanel - File Manager & Control Panel
+Documentation=https://github.com/SefionITServices/clearPanel
 After=network.target
 
 [Service]
 Type=simple
-User=hpanel
-Group=hpanel
-WorkingDirectory=/opt/hpanel/backend
+User=clearpanel
+Group=clearpanel
+WorkingDirectory=/opt/clearpanel/backend
 ExecStart=/usr/bin/node dist/main.js
 Restart=always
 RestartSec=10
 StandardOutput=journal
 StandardError=journal
-SyslogIdentifier=hpanel
+SyslogIdentifier=clearpanel
 
 # Environment
 Environment=NODE_ENV=production
@@ -21,7 +22,7 @@ Environment=PORT=3334
 # Security
 NoNewPrivileges=true
 PrivateTmp=true
-ReadWritePaths=/opt/hpanel/data
+ReadWritePaths=/opt/clearpanel/data
 
 # Performance
 LimitNOFILE=65535
