--- a/cloudflared/config.yml.example
+++ b/cloudflared/config.yml.example
@@ -1,4 +1,4 @@
-# Example Cloudflare Tunnel config for hPanel
+﻿# Example Cloudflare Tunnel config for clearPanel
 # Copy to ~/.cloudflared/config.yml and adjust values
 
 # Replace with your tunnel ID (from `cloudflared tunnel list`)
@@ -12,3 +12,4 @@ ingress:
   - hostname: panel.example.com
     service: http://localhost:3334
   - service: http_status:404
+
